Fixed sorting and 'fixed' legend overlap in trip chart

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@
 /* Filters */
 #filters {
     bottom: 0%;
-    left: 15%;
+    left: 5%;
     width: 90%;
     padding: 10px;
     position: sticky;
